--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "@tailwindcss/typography": "github:tailwindcss/typography",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "isbot": "^4.1.0",
